--- a/manifest.yml
+++ b/manifest.yml
@@ -1,11 +1,23 @@
----
 applications:
-- name: helion-mysql-java-jersey
-  mem: 512M
-  path: build/mysql-java-jersey-1.0
-  services:
-    ${name}-db:
-      type: mysql
-  helion:
-    hooks:
-        post-staging: python create_db.py
+  .:
+   name: java-starter-app 
+   mem: 512M
+   path: build/java-starter-app-1.0
+   services:
+     ${name}-mysql-db:
+       type: mysql
+     #${name}-postgres-db:
+      # type: postgresql
+     #${name}-rabbitmq3:
+      # type: rabbitmq3
+     #${name}-mongo-db:
+      # type: mongodb
+     #${name}-filesystem:
+      # type: filesystem
+     #${name}-harbor:
+      # type: harbor
+     #${name}-memcached:
+      # type: memcached
+   helion:
+    env:
+        ENV_VAR: ${name}
